--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <strong>Цей сайт був проданий , тому зараза він не доступний . Скрін сайту з телефона : </strong>
-                 <img src="img/Voentorg.png" >
+    <strong  style="font-size:20px; color:black;">Цей сайт був проданий , тому зараза він не доступний . Скрін сайту : </strong>
+                 <img src="img/Voentorg.png">
 </body>
 </html>
